# canis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
assets/models/: white_ground.mtl
assets/shaders/: lighting.fs  shadow_mapping.fs  sts.block.fs  sts.block.vs  tower.fs  tower.vs
assets/textures/: palette.kra~
assets/textures/palette/: palette.kra  palette.kra-autosave.kra
docs/: linux-vscode-setup.txt
include/Canis/: App.hpp  Asset.hpp  AssetHandle.hpp  AssetManager.hpp  Audio.hpp  AudioManager.hpp  Camera.hpp  Camera2D.hpp  Canis.hpp  Debug.hpp  Editor.hpp  Entity.hpp  IOManager.hpp  InputManager.hpp  Math.hpp  PlayerPrefs.hpp  Scene.hpp  SceneManager.hpp  ScriptableEntity.hpp  Shader.hpp  Time.hpp  UUID.hpp  Window.hpp  Yaml.hpp
include/Canis/Data/: Bit.hpp  Character.hpp  DefaultMeshData.hpp  GLTexture.hpp  Glyph.hpp  SpriteVertex.hpp  Types.hpp  Vertex.hpp
include/Canis/DataStructure/: List.hpp  OctTree.hpp  PerlinNoise2D.hpp  QuadTree.hpp
include/Canis/DataStucture/: OctTree.hpp  QuadTree.hpp
include/Canis/ECS/: Decode.hpp  Encode.hpp
include/Canis/ECS/Components/: BoxColliderComponent.hpp  ButtonComponent.hpp  Camera2DComponent.hpp  CircleColliderComponent.hpp  Color.hpp  ColorComponent.hpp  DamageText3DComponent.hpp  DirectionalLight.hpp  DirectionalLightComponent.hpp  IDComponent.hpp  Mesh.hpp  MeshComponent.hpp  ParticleComponent.hpp  ParticleEmitter.hpp  ParticleEmitterComponent.hpp  PointLightComponent.hpp  RectTransform.hpp  RectTransformComponent.hpp  ScriptComponent.hpp  SphereCollider.hpp  SphereColliderComponent.hpp  SpotLightComponent.hpp  Sprite2DComponent.hpp  SpriteAnimationComponent.hpp  TagComponent.hpp  TextComponent.hpp  Transform.hpp  TransformComponent.hpp  UIImageComponent.hpp  UISliderComponent.hpp  UISliderKnobComponent.hpp
include/Canis/ECS/Systems/: ButtonSystem.hpp  CollisionSystem.hpp  CollisionSystem2D.hpp  DamageText3DSystem.hpp  ParticleEmitterSystem.hpp  RenderBasicMeshSystem.hpp  RenderHD3D.hpp  RenderHDRSystem.hpp  RenderHUDSystem.hpp  RenderMeshSystem.hpp  RenderMeshWithShadowSystem.hpp  RenderSkyboxSystem.hpp  RenderTextSystem.hpp  SpriteAnimationSystem.hpp  SpriteRenderer2DSystem.hpp  System.hpp  UISliderKnobSystem.hpp  UISliderSystem.hpp
include/Canis/GameHelper/StateMachine/: State.hpp  StateMachine.hpp
src/: App.cpp  App.hpp  Asset.cpp  AssetManager.cpp  Audio.cpp  AudioManager.cpp  Camera.cpp  Camera2D.cpp  Camera2D.hpp  Canis.cpp  Debug.cpp  Debug.h  Editor.cpp  Entity.cpp  GLSLProgram.cpp  GLSLProgram.hpp  GLTexture.h  Game.cpp  Game.hpp  IOManager.cpp  IOManager.hpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  MainGame.cpp  MainGame.hpp  Math.cpp  PlayerPrefs.cpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  SceneManager.cpp  Shader.cpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  TextureCache.cpp  TextureCache.hpp  Time.cpp  (+6 more)
src/Canis/: Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  Canis.c  Canis.cpp  Canis.h  Canis.hpp  Debug.cpp  Debug.h  GLSLProgram.cpp  GLSLProgram.hpp  GLTexture.h  IOManager.c  IOManager.cpp  IOManager.h  IOManager.hpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  InputManager.hpp  Limiter.cpp  Limiter.hpp  Math.cpp  Math.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  TextureCache.cpp  TextureCache.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  Timing.cpp  (+5 more)
src/Canis/ECS/: ECS.cpp  ECS.hpp  ECSComponent.cpp  ECSComponent.hpp  ECSSystem.cpp  ECSSystem.hpp
src/Canis/ECS/Components/: ColorComponent.hpp  CubeMeshComponent.hpp  TransformComponent.hpp
src/Canis/ECS/Systems/: RenderCubeSystem.hpp  RenderMeshSystem.hpp  RenderTextSystem.hpp
src/Canis/GameHelper/: AStar.cpp  AStar.hpp
src/DataStructure/: List.cpp  PerlinNoise2D.cpp
src/ECS/: Decode.cpp  Encode.cpp
src/ECS/Components/: CastleComponent.hpp  HealthComponent.hpp  PortalComponent.hpp  SlimeMovementComponent.hpp  SpikeComponent.hpp  SpikeTowerComponent.hpp
src/ECS/Systems/: ButtonSystem.cpp  CastleSystem.hpp  CollisionSystem2D.cpp  DamageText3DSystem.cpp  MoveSlimeSystem.hpp  PortalSystem.hpp  RenderHUDSystem.cpp  RenderTextSystem.cpp  SpikeSystem.hpp  SpikeTowerSystem.hpp  SpriteAnimationSystem.cpp  SpriteRenderer2DSystem.cpp  UISliderKnobSystem.cpp  UISliderSystem.cpp
src/Engine/: Debug.cpp  Debug.hpp  Engine.cpp  Engine.hpp  IOManager.cpp  IOManager.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Engine/Data/: GLTexture.hpp
src/Game/ECS/Components/: BlockComponent.hpp  FireBallComponent.hpp  FireTowerComponent.hpp  GemMineTowerComponent.hpp  IceTowerComponent.hpp  PlacementToolComponent.hpp  SlimeFreezeComponent.hpp  SlimeMovementComponent.hpp  TowerMeshComponent.hpp
src/Game/ECS/Systems/: CastleSystem.hpp  FireBallSystem.hpp  FireTowerSystem.hpp  GemMineTowerSystem.hpp  IceTowerSystem.hpp  MoveSlimeSystem.hpp  PlacementToolSystem.hpp  PortalSystem.hpp  RenderTowerSystem.hpp  SlimeFreezeSystem.hpp  SpikeSystem.hpp  SpikeTowerSystem.hpp
src/Game/Scripts/: HUDManager.hpp  ScoreSystem.hpp  TileMap.hpp  Wallet.hpp
src/GameHelper/: AStar.cpp
